@@ -1,6 +1,6 @@
 Package: bartCause
-Version: 1.0-9
-Date: 2024-09-16
+Version: 1.0-10
+Date: 2025-07-29
 Title: Causal Inference using Bayesian Additive Regression Trees
 Authors@R: c(
   person("Vincent", "Dorie", role = c("aut", "cre"), email = "vdorie@gmail.com",      comment = c(ORCID = "0000-0002-9576-3064")),
